--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
-  <meta http-equiv="refresh" content="0; url=http://82.25.190.73:30013/">
-  <script>
-    window.location.replace("http://82.25.190.73:30013/");
-  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Site</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      background: black;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
 </head>
 <body>
+  <iframe src="http://82.25.190.73:30013/" id="myFrame" allowfullscreen></iframe>
 </body>
 </html>
