--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Site</title>
   <style>
     html, body {
@@ -13,14 +13,16 @@
       background: black;
     }
     iframe {
-      border: none;
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      display: block;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <iframe src="http://82.25.190.73:30013/" id="myFrame" allowfullscreen></iframe>
+  <iframe src="http://82.25.190.73:30013/" allowfullscreen></iframe>
 </body>
 </html>
