--- a/index.html
+++ b/index.html
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Site</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      background: black;
-    }
-    iframe {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=http://82.25.190.73:30013/">
+  <script>
+    window.location.replace("http://82.25.190.73:30013/");
+  </script>
 </head>
 <body>
-  <iframe src="http://82.25.190.73:30013/" allowfullscreen></iframe>
 </body>
 </html>
