--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=http://82.25.190.73:30013/">
+  <meta http-equiv="refresh" content="0; url=http://bay4lly.run.place:30013/">
   <script>
-    window.location.replace("http://82.25.190.73:30013/");
+    window.location.replace("http://bay4lly.run.place:30013/");
   </script>
 </head>
 <body>
